# snigma

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: hotkey.ts  index.css  main.tsx  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  capture.rs  lib.rs  main.rs
src/components/: CaptureOverlay.tsx  ChatWidget.tsx
src/windows/: CaptureWindow.tsx  ChatWindow.tsx  MainWindow.tsx
