[package]
name        = "snigma"
version     = "0.1.0"
description = "Snigma — AI screen-capture assistant"
authors     = ["you"]
edition     = "2021"

[lib]
name       = "snigma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                        = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart       = "2"
serde                        = { version = "1", features = ["derive"] }
serde_json                   = "1"
tokio                        = { version = "1", features = ["full"] }
reqwest                      = { version = "0.12", features = ["json", "stream"] }
futures-util                 = "0.3"
base64                       = "0.22"
image                        = "0.25"
xcap                         = "0.0.14"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
